<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/text_outline">

    <!-- ==== DATE ==== -->
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <!-- ==== ROUNDS ==== -->
    <TextView
        android:id="@+id/tvRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rounds"
        android:textColor="#FFFFFF" />

    <!-- ==== DURATION ==== -->
    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textColor="#FFFFFF" />

</LinearLayout>
