<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    android:padding="14dp">

    <!-- ======== TIMER CIRCLE ======== -->
    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="200dp">

        <!-- ==== CIRCLE ==== -->
        <ProgressBar
            android:id="@+id/circularProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/circle_timer"
            android:rotation="-90" />

        <!-- ==== TIMER INFO ==== -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <!-- ==== TIME REMAINING ==== -->
            <TextView
                android:id="@+id/tvTimeRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_00"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />

            <!-- ==== ROUNDS INFO ==== -->
            <TextView
                android:id="@+id/tvRoundInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_1_of_1"
                android:textColor="#FFFFFF" />

            <!-- ==== REST ==== -->
            <TextView
                android:id="@+id/tvNextRest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_15_sec"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </FrameLayout>

    <!-- ======== BUTTONS ======== -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ==== START ==== -->
            <Button
                android:id="@+id/btnStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start"
                android:layout_margin="4dp"
                android:background="@drawable/button_red"
                android:textColor="#FFFFFF" />

            <!-- ==== PAUSE ==== -->
            <Button
                android:id="@+id/btnPause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pause"
                android:layout_margin="4dp"
                android:background="@drawable/button_outline"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ==== RESET ==== -->
            <Button
                android:id="@+id/btnRestart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:layout_margin="4dp"
                android:background="@drawable/button_outline"
                android:textColor="#FFFFFF" />

            <!-- ==== END ==== -->
            <Button
                android:id="@+id/btnEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end"
                android:layout_margin="4dp"
                android:background="@drawable/button_red"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
